--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Saira, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f4f4f4;
@@ -36,3 +36,4 @@ footer {
   background-color: #333;
   color: white;
 }
+
